perf(comments): remove unwanted comments

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- when you click button it will show a fact/ Prompts user to click button -->
+    <!-- when you click button it will show facts/ Prompts user to click button -->
     <button onclick="showFacts()">Click button to generate interesting facts!</button>
     <!-- display facts here -->
     <p id="facts"></p>
 <script>
-   // function retrieves a facts
+   // function retrieves facts
 async function getFacts(){
   const limit = 3; //limits to three facts
   const api_endpoint = `https://api.api-ninjas.com/v1/facts?limit=${limit}`;
@@ -29,9 +29,7 @@ async function getFacts(){
 async function showFacts(){
   const factsResponse = await getFacts();
   const paragraphTag = document.getElementById("facts");
-  //paragraphTag.innerText = JSON.stringify(factsResponse);
   paragraphTag.innerText = factsResponse.map(fact => fact.fact).join('\n');
-  //API KEY: OAYHzh1ziw+jgCl+y5HDXA==nFs4joNeT4dQxDwj
 }
 </script>
 </body>
